--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -1,5 +1,9 @@
 
 on:
+  workflow_dispatch:
+    inputs:
+      tags:
+        description: 'Test scenario tags'
   schedule:
     - cron:  '0 17,19,21,22 * * 5,6,0,1' # At minute 0 past hour 17, 19, 21, and 22 on Friday, Saturday, Sunday, and Monday. Ref https://crontab.guru/examples.html
 name: Scrape Data
@@ -8,11 +12,21 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
+      with:
+        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - name: Build
       run: npm install
     - name: Scrape
-      run: npm run action 
-    - uses: mikeal/publish-to-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub sets this for you
+      run: npm run action
+    - name: Commit files
+      run: |
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git commit -m "Lewandowski goals updated" -a
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
