--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@use-it/interval": "^1.0.0",
     "d3": "^6.3.1",
     "d3-selection": "^2.0.0",
+    "jsdom": "~16.3.0",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "use-http": "^1.0.16",
-    "web-vitals": "^0.2.4"
+    "use-http": "^1.0.16"
   },
   "scripts": {
     "start": "react-scripts start",
