--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git commit -m "Lewandowski goals updated" -a
+        git commit -m "Lewandowski goals updated" -a || echo "No changes to commit"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
