--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Lewy vs Muller",
-  "name": "Bundesliga Goals Records (Lewy vs Müller)",
+  "name": "Bundesliga Goals Record (Lewy vs Müller)",
   "icons": [
     {
       "src": "favicon.ico",
